--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.0",
-    "sass": "^1.35.1"
+    "sass": "^1.35.1",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.10"
